Added entity class for user table. Added jsp for main game page, added game servlet, js and css for it. Added UI for bulls & cows game.

--- a/src/main/webapp/css/login_style.css
+++ b/src/main/webapp/css/login_style.css
@@ -21,3 +21,11 @@ input {
     border: solid 1px #c0c5db;
     border-radius: 4px;
 }
+
+input[type=submit] {
+    cursor: pointer;
+}
+
+/*h2 {*/
+    /*text-align: center;*/
+/*}*/
