--- a/src/main/webapp/css/game_style.css
+++ b/src/main/webapp/css/game_style.css
@@ -3,12 +3,14 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80%;
+    padding-top: 50px;
+    /*height: 70%;*/
 }
 
 .main_container {
     display: flex;
     justify-content: center;
+    /*height: 100%;*/
 }
 
 .left_container {
@@ -94,14 +96,64 @@ input#numeric_display {
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 25px;
 }
 
 #ask_computer_button {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 60px;
+    height: 30px;
     /*margin-top: 5px;*/
-    width: 50%;
     cursor: pointer;
     user-select: none;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 60px;
+    background-color: rgba(29,29,29,0.8);
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 35px;
+    font-size: 1.8em;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+}
+
+.menu_wrapper {
+    border-bottom: solid 1px rgba(204, 204, 204, 0.8);
+}
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    height: 35px;
+    margin-left: 35px;
+}
+
+.menu_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-right: 20px;
+    margin-bottom: -1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: pointer;
+    /*background-color: blue;*/
+    border-bottom: solid 2px rgba(49, 117, 204, 0.8);
+}
+
+.menu_item span {
+    display: flex;
+    justify-content: center;
 }
