--- a/src/main/webapp/css/game_style.css
+++ b/src/main/webapp/css/game_style.css
@@ -1,18 +1,3 @@
-.center_content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding-top: 50px;
-    /*height: 70%;*/
-}
-
-.main_container {
-    display: flex;
-    justify-content: center;
-    /*height: 100%;*/
-}
-
 .left_container {
     display: flex;
     flex-direction: column;
@@ -32,7 +17,7 @@
 }
 
 .right_container span {
-    margin-top: 13px;
+    margin-top: 5px;
     font-size: 2em;
     text-align: center;
     user-select: none;
@@ -88,10 +73,6 @@ input#numeric_display {
     border-radius: 4px;
 }
 
-/*input[placeholder] {
-    color: rgba(230, 230, 230, 1);
-}*/
-
 .check_button_wrapper {
     display: flex;
     justify-content: center;
@@ -110,81 +91,31 @@ input#numeric_display {
     user-select: none;
 }
 
-.header {
+.user_attempts {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+table {
     width: 100%;
-    height: 60px;
-    background-color: rgba(29,29,29,0.8);
-}
-
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 35px;
-    font-size: 1.8em;
-    text-align: center;
-    color: rgba(255, 255, 255, 1);
-}
-
-.header .user {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    height: 100%;
-    color: white;
-}
-
-.header .logout_wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    margin-right: 35px;
     margin-left: 15px;
+    font-size: 12px;
 }
 
-.header .logout_wrapper button {
-    cursor: pointer;
-    font-weight: bold;
+th {
+    font-weight: normal;
+    color: #039;
+    padding: 5px 15px;
 }
 
-.menu_wrapper {
-    border-bottom: solid 1px rgba(204, 204, 204, 0.8);
+td {
+    color: #669;
+    border-top: 1px solid #e8edff;
+    padding: 5px 15px;
 }
 
-.menu {
-    display: flex;
-    flex-direction: row;
-    height: 35px;
-    margin-left: 35px;
-}
-
-.menu_item {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    margin-right: 20px;
-    margin-bottom: -1px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    cursor: pointer;
-}
-
-.menu_item span {
-    display: flex;
-    justify-content: center;
-}
-
-.menu_item .bottom_line {
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    bottom: -1px;
-    background-color: rgba(49, 117, 204, 0.8);
-    opacity: 0;
+tr:nth-child(2n) {
+    background: #e8edff;
 }
