--- a/src/main/webapp/css/base_style.css
+++ b/src/main/webapp/css/base_style.css
@@ -91,3 +91,13 @@
     background-color: rgba(49, 117, 204, 0.8);
     opacity: 0;
 }
+
+a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+a:hover {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
