--- a/src/main/webapp/css/game_style.css
+++ b/src/main/webapp/css/game_style.css
@@ -98,6 +98,10 @@ input#numeric_display {
     flex-direction: column;
 }
 
+#start_game_btn {
+    cursor: pointer;
+}
+
 table {
     width: 100%;
     margin-left: 30px;
